reign/reign_derive/tests/ui/compile_fail/options_trailing_comma.stderr
error: unexpected end of input, expected identifier
 --> $DIR/options_trailing_comma.rs:5:5
  |
5 |     json!(200, status = 100,);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
